# zavrsni_rad_b-shell

./: .gitignore  CMakeLists.txt  README.md  code.c  xor_string.h
stripBinary/: stripBinary
